@@ -1,3 +1,7 @@
+2007-12-17  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Syscall.cs: Bind uname(2).
+
 2007-10-25  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Stdlib.cs: Fix perror(3) so that it works as expected.  (Since errno is
